# djuplet

./: .gitignore  README.md
create_reasoning_dataset/: .add_prompt.py.un~  .add_reasoning.py.un~  .create_splits_and_upload_reason_dataset.py.un~  .fetch_deepseek_reasoning_data.py.un~  .pretrain_processed.jsonl.un~  README.md  add_corruption.py  add_prompt.py  build_prompt.py  corrupt_paragraphs.py  corrupter.py  create_reasoning_data.py  create_splits_and_upload_dataset.py  create_splits_and_upload_reason_dataset.py  fetch_deepinfra_reasoning_data.py  fetch_deepseek_reasoning_data.py  filter_norwegian.py  pretrain_processed.jsonl  pretrain_processed_prompt.jsonl  requirements.txt  wiki_downloader.py
create_wikipedia_dataset/: .README.md.un~  .add_corruption.py.un~  .corrupt_paragraphs.py.un~  .create_splits_and_upload_dataset.py.un~  .download_wiki_paragraphs.py.un~  .fetch_deepseek_reasoning_data.py.un~  .validate_and_corrupt_paragraphs.py.un~  README.md  corrupt_paragraphs.py  create_splits_and_upload_dataset.py  download_wiki_paragraphs.py  validate_and_corrupt_paragraphs.py
ds_train/: pyproject.toml
ds_train/ds_train/: grpo-qwen-2.5-3b-deepseek-r1-countdown.yaml  norsk.yaml  norsk_warmstart.yaml  norsk_zero.yaml  run.sh  run_r1_grpo.py  train_gpro_simple.py
jax/: train_djuplet.py
templates/: .deepseek_template.txt.un~  .prompt_template.txt.un~  .sample_README.md.un~  README.md  deepseek_template.txt  deepseek_template_norwegian.txt  prompt_template.txt  prompt_template_norwegian.txt  sample_README.md
tools/: add_corruption.py  corrupter.py  permutations.py  (+3 more)
