[project]
name = "ds-train"
version = "0.1.0"
description = ""
authors = [
    {name = "simen",email = "simen@eide.ai"}
]
readme = "README.md"
requires-python = "==3.12.8"
dependencies = [
    "lightning (>=2.5.0.post0,<3.0.0)",
    "torch (<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "transformers (>=4.48.2,<5.0.0)",
    "bitsandbytes (>=0.45.1,<0.46.0)",
    "datasets (>=3.2.0,<4.0.0)",
    "accelerate (>=1.3.0,<2.0.0)",
    "tensorboard (>=2.18.0,<3.0.0)",
    "ipykernel>=6.29.5,<7.0.0",
    "peft (>=0.14.0,<0.15.0)",
    "ipywidgets (>=8.1.5,<9.0.0)",
    "jupyter>=1.1.1,<2.0.0",
    "wandb (>=0.19.5,<0.20.0)",
    "hf-transfer (>=0.1.9,<0.2.0)",
    "trl>=0.14.0",
    "vllm>=0.7.2",
    "jiwer>=3.1.0",
    "langdetect>=1.0.9",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
]
